DanDike_NewBoard.sdk/.metadata/.plugins/org.eclipse.cdt.ui/vdma_lcd_v2.build.log
15:51:23 **** Auto Build of configuration Debug for project vdma_lcd_v2 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/vdma_api/vdma_api.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/vdma_api/vdma_api.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../vdma_lcd_v2_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/vdma_api/vdma_api.d" -MT"src/vdma_api/vdma_api.o" -o "src/vdma_api/vdma_api.o" "../src/vdma_api/vdma_api.c"
'Finished building: ../src/vdma_api/vdma_api.c'
' '
'Building file: ../src/dynclk/dynclk.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/dynclk/dynclk.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../vdma_lcd_v2_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/dynclk/dynclk.d" -MT"src/dynclk/dynclk.o" -o "src/dynclk/dynclk.o" "../src/dynclk/dynclk.c"
'Finished building: ../src/dynclk/dynclk.c'
' '
'Building file: ../src/display_ctrl/display_ctrl.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/display_ctrl/display_ctrl.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../vdma_lcd_v2_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/display_ctrl/display_ctrl.d" -MT"src/display_ctrl/display_ctrl.o" -o "src/display_ctrl/display_ctrl.o" "../src/display_ctrl/display_ctrl.c"
'Finished building: ../src/display_ctrl/display_ctrl.c'
' '
'Building file: ../src/main.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../vdma_lcd_v2_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'main':
../src/main.c:37:28: error: 'XPAR_AXI_DYNCLK_0_BASEADDR' undeclared (first use in this function); did you mean 'XPAR_AXI_VDMA_0_BASEADDR'?
 #define DYNCLK_BASEADDR    XPAR_AXI_DYNCLK_0_BASEADDR //动态时钟基地址
                            ^
../src/main.c:78:44: note: in expansion of macro 'DYNCLK_BASEADDR'
  DisplayInitialize(&dispCtrl, DISP_VTC_ID, DYNCLK_BASEADDR);
                                            ^~~~~~~~~~~~~~~
../src/main.c:37:28: note: each undeclared identifier is reported only once for each function it appears in
 #define DYNCLK_BASEADDR    XPAR_AXI_DYNCLK_0_BASEADDR //动态时钟基地址
                            ^
../src/main.c:78:44: note: in expansion of macro 'DYNCLK_BASEADDR'
  DisplayInitialize(&dispCtrl, DISP_VTC_ID, DYNCLK_BASEADDR);
                                            ^~~~~~~~~~~~~~~
make: *** [src/subdir.mk:23: src/main.o] Error 1

15:51:24 Build Finished (took 1s.51ms)

